Fix work grid in small screens
Layout broke if one description broke onto one line and another didn't.

--- a/css/global.less
+++ b/css/global.less
@@ -978,7 +978,10 @@ div.twitter-tweet-rendered {
 	}
 	.project {
 		opacity: 1;
-		}
+	}
+	.project small {
+		height: 30px;
+	}
 	.work .imgr figure,
 	.work .imgl figure {
 		width: 60%;
